# ipos-open-source-2026S1

./: .flake8  SPEC.md  main.py  onboarding.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: python-app.yml
src/: file_handler.py  task.py  task_manager.py
tests/: test_file_handler.py  test_task_manager.py
